//Compile with: protoc --python_out=/path/to/Subspace/subspace payload.proto

message SignedPayload {
	required bytes serializedMessageData = 1;
	required bytes HMac                  = 2;
}

message MessageData {
    required bytes messageID           = 1;
    required uint64 sequence           = 2;
	required string senderKey          = 3;
	optional string messageType        = 4;
	required uint64 timeStamp          = 5;
	optional string subject            = 6;
	required string unencryptedMessage = 7;
	optional string senderName         = 8;
	optional bytes pad                 = 9;
}